# hamptometer

./: .gitignore  CMakeLists.txt  README.md  config.h  htmldata.c  info.c  lwipopts.h  main.c  pico_sdk_import.cmake
info/: CMakeLists.txt  info.c  info.h
network/: CMakeLists.txt  cgi.h  makefsdata.py  picow_ntp_client.c  picow_ntp_client.h  ssi.h
network/html_files/: index.shtml  second.shtml  stylesheet.css
utils/: CMakeLists.txt  utils.c  utils.h
